Lots of tiny changes

--- a/index.html
+++ b/index.html
@@ -304,6 +304,21 @@
             </div>
             <div class="col-sm-8 project-banner-setting"><img class="img-fluid"  src="http://placehold.it/933x700"></div>
         </div>
+
+        <!-- Data visualization -->
+        <div class="row home-brief">
+            <div class="col-sm-4 home-project-brief">
+                <p><i class="fa fa-linux"></i></p>                
+                <h5 class="home-project-title"><i class="fa fa-angle-double-right"></i>&nbsp;Diabetes prevalence visualiation</h5>
+                <h3 class="home-project-subtitle">Is there any relation between income and diabetes prevalence?</h3>
+                <p>I applied data visualization principle to uncover relation between diabetes prevalence and income of nations.</p>
+                <h6 class="home-project-tags">Data set collection, Programming, Data visualization</h6>
+                <p>February 2016 - 1 day</p>                
+                <div class="view-case-study0"><span class="view-case-study"><a href="shure.html">View case study</a></span></div>
+            </div>
+            <div class="col-sm-8 project-banner-setting"><img class="img-fluid"  src="http://placehold.it/933x700"></div>
+        </div>
+
         
 
     </div>
