--- a/instapark.html
+++ b/instapark.html
@@ -271,7 +271,7 @@
           </div>
         </div>
       </div>
-      <div class="row" style="padding-bottom:5%;text-align:center">
+      <div class="row" style="padding:5%;text-align:center">
         <h2 class="h2tufte">Evaluate multiple solutions for different tasks.</h2>
       </div>
       <div class="row card-row">
