--- a/shure.html
+++ b/shure.html
@@ -145,5 +145,33 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <article class="nobottompadding">
+          <section>
+            <h2>Judge's decision</h2>
+            <p>We are awarded the 2nd position for our idea, since we managed to finish the information flow, paper prototype, sample Hi FI mockups and presentation slides within 1.5 hours. The judges appreciated the idea of GPS locator and collaboration.</p>
+          </section>
+        </article>
+      </div>
+    </div>
+    <div class="container-fluid showcase">
+      <div class="row" style="margin:0 auto;text-align:center">
+        <div class="col-md-6 center-block" style="float:none"> 
+          <div class="card" style="padding:1rem"><a href="img/w_shure/presentation.jpg" target="_blank"><img class="img-responsive" src="img/w_shure/presentation.jpg" style="margin: 0 auto" title="Click to see enlarged image"/></a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <article class="nobottompadding">
+          <section>
+            <h2>Takeaways</h2>
+            <p>This was my first design jam and I was quite new to the idea of working together in a team. It made me realize the importance of working together in a tight schedule. I also had the opportunity to meet and work with people from different backgrounds. Lastly I felt I could improve more on my presentation skills as I usually speak very fast.</p>
+          </section>
+        </article>
+      </div>
+    </div>
   </body>
 </html>
