Add resume . fix index links

--- a/index.html
+++ b/index.html
@@ -201,18 +201,18 @@
                 and vertically centered.
             --><div class="col-sm-6 site-menu">
                 <h6>
-                    <span class="selected" href="#">work</span>&nbsp;/&nbsp;
-                    <a href="#">about me</a>&nbsp;/&nbsp;
-                    <a href="#">r&eacute;sum&eacute;</a>
+                    <span class="selected" href="#">work</span>&nbsp;
+<!--                /&nbsp;
+                    <a href="#">about me</a>&nbsp;-->
+                    /&nbsp; <a href="resume.pdf">r&eacute;sum&eacute;</a>
                 </h6>
                 <h6>
-                    <a href="#">graphic design</a>&nbsp;/&nbsp;
-                    <a href="#">motion design</a>
+                    <a href="graphic.html">graphic design</a>
+<!--                &nbsp;/&nbsp;<a href="#">motion design</a>-->
                 </h6>
                 <h6>
-                    <a href="#"><i class="fa fa-twitter"></i></a>&nbsp;/&nbsp;
-                    <a href="#"><i class="fa fa-linkedin"></i></a>&nbsp;/&nbsp;
-                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.twitter.com/frosted2fire"><i class="fa fa-twitter"></i></a>&nbsp;/&nbsp;
+                    <a href="https://www.linkedin.com/in/radhikak1"><i class="fa fa-linkedin"></i></a>
                 </h6>
             </div>
         </div>
