--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div class="col-sm-8 project-banner-setting"><a href="origin.html"><img class="img-fluid" src="http://placehold.it/1500x925  "></a></div>
         </div>        
         
-        <!-- Redhat Brief -->
+        <!-- Redhat Brief 
         <div class="row home-brief">
             <div class="col-sm-4 home-project-brief">
                 <p><i class="fa fa-linux"></i></p>                
@@ -275,6 +275,7 @@
             </div>
             <div class="col-sm-8 project-banner-setting"><img class="img-fluid"  src="http://placehold.it/1500x925"></div>
         </div>       
+        -->
         
         <!-- CSS Quizzer -->
         <div class="row home-brief">
