Add About page stucture

--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
             --><div class="col-sm-6 site-menu">
                 <h6>
                     <span class="selected" href="#">work</span>&nbsp;
-<!--                /&nbsp;
-                    <a href="#">about me</a>&nbsp;-->
+                    /&nbsp;
+                    <a href="story.html">my story</a>&nbsp;
                     /&nbsp; <a href="resume.pdf">r&eacute;sum&eacute;</a>
                 </h6>
                 <h6>
