--- a/graphic.html
+++ b/graphic.html
@@ -18,6 +18,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="work.css"/>
+    <link rel="stylesheet" href="imagehover.min.css"/>
     <style>
       .navbar-default {
           background-color: #293E68;
@@ -59,7 +60,6 @@
         <div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li><a href="challenge">Challenge</a></li>
             </ul>
           </div>
         </div>
