--- a/shure.html
+++ b/shure.html
@@ -18,6 +18,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="work.css"/>
+    <link rel="stylesheet" href="imagehover.min.css"/>
     <style>
       .navbar-default {
           background-color: #293E68;
