--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </div><!--
                 Comment is important to keep the menu items to the right side of title
                 and vertically centered.
-            --><div class="col-sm-6 site-menu">
+            --><div id="site-menu1" class="col-sm-6 site-menu">
                 <h6>
                     <span class="selected" href="#">work</span>&nbsp;
                     /&nbsp;
@@ -224,9 +224,9 @@
                 <p><i class="fa fa-car"></i></p>
                 <h5 class="home-project-title"><i class="fa fa-angle-double-right"></i>&nbsp;Instapark</h5>
                 <h3 class="home-project-subtitle">It's like Airbnb, but for Parking at Universities</h3>
-                <p>There are several untapped opportunities for finding cheap parking spots in Ann Arbor. Parking prices vary through the day at various places and students are eager to rent out their personal spots for some extra money. Unfortunately, no centralized platform exists to make this happen. I built an app to address these needs</p>
+                <p class="home-project-blurb">There are several untapped opportunities for finding cheap parking spots in Ann Arbor. Parking prices vary through the day at various places and students are eager to rent out their personal spots for some extra money. Unfortunately, no centralized platform exists to make this happen. I built an app to address these needs</p>
                 <h6 class="home-project-tags">ideation, research, design, evaluate</h6>
-                <p>Sep '15 - Dec '15</p>                
+                <p class="home-project-blurb">Sep '15 - Dec '15</p>                
                 <div class="view-case-study0"><span class="view-case-study"><a href="instapark.html">View case study</a></span></div>
             </div>
             <div class="col-sm-8 project-banner-setting"><img class="img-fluid"  src="http://placehold.it/1500x925"></div>
@@ -239,9 +239,9 @@
                 <p><i class="fa fa-gamepad"></i></p>
                 <h5 class="home-project-title"><i class="fa fa-angle-double-right"></i>&nbsp;Latitude 90 - the origin</h5>
                 <h3 class="home-project-subtitle">First of it's kind, mobile-social hybrid deduction game</h3>
-                <p>Gaming company <a href="http://www.ghostroadhouse.com/">Ghost roadhouse</a> wanted us to redesign their game Latitude 90 for iOS. Latitude 90 is a first of it's kind hybrid mobile-social deduction game similar to werewolf and mafia. Client received addititional funding from Kickstarter due to this redesign.</p>
+                <p class="home-project-blurb">Gaming company <a href="http://www.ghostroadhouse.com/">Ghost roadhouse</a> wanted us to redesign their game Latitude 90 for iOS. Latitude 90 is a first of it's kind hybrid mobile-social deduction game similar to werewolf and mafia. Client received addititional funding from Kickstarter due to this redesign.</p>
                 <h6 class="home-project-tags">research, redesign</h6>
-                <p>Sep '15 - Dec '15</p>                
+                <p class="home-project-blurb">Sep '15 - Dec '15</p>                
                 <div class="view-case-study0"><span class="view-case-study"><a href="origin.html">View case study</a></span></div>
             </div>
             <div class="col-sm-8 project-banner-setting"><a href="origin.html"><img class="img-fluid" src="img/origin_banner_resized_3.png"></a></div>
@@ -254,9 +254,9 @@
                 <h5 class="home-project-title"><i class="fa fa-angle-double-right"></i>&nbsp;My portfolio website design</h5>
                 <h3 class="home-project-subtitle">Applying UX principles and front-end development to my portfolio website</h3>
                 
-                <p>An journey filled with lessons and learnings as I ventured to build a portfolio capturing my work. Experiences in an UX approach to portfolio website design, website creation and front-end development.</p>
+                <p class="home-project-blurb">An journey filled with lessons and learnings as I ventured to build a portfolio capturing my work. Experiences in an UX approach to portfolio website design, website creation and front-end development.</p>
                 <h6 class="home-project-tags">HTML, CSS3, SCSS, Jade, Bootstrap v3, Javascript</h6>
-                <p>Dec'16 - Jan'17</p>                
+                <p class="home-project-blurb">Dec'16 - Jan'17</p>                
                 <div class="view-case-study0"><span class="view-case-study"><a href="website_design.html">View case study</a></span></div>
             </div>
             <div class="col-sm-8 project-banner-setting"><a href="origin.html"><img class="img-fluid" src="http://placehold.it/1500x925  "></a></div>
@@ -283,9 +283,9 @@
                 <p><i class="fa fa-linux"></i></p>                
                 <h5 class="home-project-title"><i class="fa fa-angle-double-right"></i>&nbsp;CSS Quizzer</h5>
                 <h3 class="home-project-subtitle">Developed a web application that quizzes on CSS concepts</h3>
-                <p>I learnt CSS myself through quizzing. I wanted to help others learn CSS the same way. So, I developed a web application using Python Flask and Bootstrap</p>
+                <p  class="home-project-blurb">I learnt CSS myself through quizzing. I wanted to help others learn CSS the same way. So, I developed a web application using Python Flask and Bootstrap</p>
                 <h6 class="home-project-tags">Python, Flask, Jinja, Bootstrap</h6>
-                <p>Nov'15 - Dec'15</p>                
+                <p class="home-project-blurb">Nov'15 - Dec'15</p>                
                 <div class="view-case-study0"><span class="view-case-study"><a href="cssquiz.html">View case study</a></span></div>
             </div>
             <div class="col-sm-8 project-banner-setting"><img class="img-fluid"  src="http://placehold.it/1500x925"></div>
@@ -297,10 +297,10 @@
                 <p><i class="fa fa-linux"></i></p>                
                 <h5 class="home-project-title"><i class="fa fa-angle-double-right"></i>&nbsp;Shure Design Jam</h5>
                 <h3 class="home-project-subtitle">Make music truly social</h3>
-                <p>Many music apps focus on managing song libraries and listening. Shure wanted a music app that is social to help promote brand awareness of their Sound instruments.</p>
-                <p>We <strong>designed an app in 1.5 hours and won 2nd place!</strong></p>
+                <p class="home-project-blurb">Many music apps focus on managing song libraries and listening. Shure wanted a music app that is social to help promote brand awareness of their Sound instruments.</p>
+                <p class="home-project-blurb">We <strong>designed an app in 1.5 hours and won 2nd place!</strong></p>
                 <h6 class="home-project-tags">Idea generator, Paper mockups, Material design</h6>
-                <p>September 2015 - 1.5 hours</p>                
+                <p class="home-project-blurb">September 2015 - 1.5 hours</p>                
                 <div class="view-case-study0"><span class="view-case-study"><a href="shure.html">View case study</a></span></div>
             </div>
             <div class="col-sm-8 project-banner-setting"><img class="img-fluid"  src="http://placehold.it/1500x925"></div>
@@ -309,12 +309,25 @@
         <!-- Data visualization -->
         <div class="row home-brief">
             <div class="col-sm-4 home-project-brief">
-                <p><i class="fa fa-linux"></i></p>                
-                <h5 class="home-project-title"><i class="fa fa-angle-double-right"></i>&nbsp;Diabetes prevalence visualiation</h5>
+                <table>
+                    <tr>
+                        <td><p><i class="fa fa-medkit"></i></p></td>
+                        <td class="line" style="padding-left:1em; vertical-align:middle;">                                                    
+                            <svg height="6" width="100%">
+                                <line x1="0" y1="0" x2="100%" y2="0" style="stroke:#222 ;stroke-width:3"></line>
+                            </svg>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><h5 class="home-project-title"><i class="fa fa-angle-double-right"></i></h5></td>
+                        <td style="padding-left:1em; vertical-align:middle;"><h5 class="home-project-title">Diabetes prevalence visualiation</h5></td>
+                    </tr>
+                </table>
+<!--                <h5 class="home-project-title"><i class="fa fa-angle-double-right"></i>&nbsp;Diabetes prevalence visualiation</h5>-->
                 <h3 class="home-project-subtitle">Is there any relation between income and diabetes prevalence?</h3>
-                <p>I applied data visualization principle to uncover relation between diabetes prevalence and income of nations.</p>
+                <p class="home-project-blurb">I applied data visualization principle to uncover relation between diabetes prevalence and income of nations.</p>
                 <h6 class="home-project-tags">Data set collection, Programming, Data visualization</h6>
-                <p>February 2016 - 1 day</p>                
+                <p class="home-project-blurb">February 2016 - 1 day</p>                
                 <div class="view-case-study0"><span class="view-case-study"><a href="diabetes.html">View case study</a></span></div>
             </div>
             <div class="col-sm-8 project-banner-setting"><img class="img-fluid"  src="http://placehold.it/1500x925"></div>
