--- a/jade_work_template.html
+++ b/jade_work_template.html
@@ -4,8 +4,8 @@
     <title>Sample title</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <script src="https://use.typekit.net/tpy0zci.js"></script>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
+    <script src="https://use.typekit.net/tpy0zci.js"></script>
     <script type="text/javascript">
       try {
           Typekit.load({
@@ -14,8 +14,9 @@
       } catch (e) {}
     </script>
     <script src="https://use.fontawesome.com/a3a5e3ece9.js"></script>
+    <link rel="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">       </script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="work.css"/>
     <link rel="stylesheet" href="imagehover.min.css"/>
