--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"></script>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous"/>
+      <link rel="stylesheet" href="work.css"/>
       <link rel="stylesheet" href="index.css"/>
       <link rel="stylesheet" href="imagehover.min.css"/>
       <style>
@@ -50,11 +51,7 @@
     <div class="container">
       <div class="row headline">
         <div class="col-sm-6">
-          <h1 class="site-title">Radhika Kolathumani</h1>
-          <div style="position:relative">
-            <canvas style="border 1px solid white" id="canvas" height="50px"></canvas>
-            <div class="site-sub-title" id="spanbox" style="float:left; position:absolute; top:0; left:0"><span class="step" id="T1">Ideation &mdash;</span><span class="step" id="T2">Research &mdash;</span><span class="step" id="T3">Design &mdash;</span><span class="step" id="T4">Code &mdash;</span><span class="step" id="T5" ids="T3">Measure</span></div>
-          </div>
+          <h1 class="site-title">Radhika Kolathumani</h1><img class="img-responsive process_diagram" src="path1.png"/>
         </div>
         <div class="site-menu col-sm-6" id="site-menu1">
           <h6><span class="selected">work</span><span>&nbsp;/&nbsp;</span><a href="story.html">my story</a><span>&nbsp;/&nbsp;</span><a href="resume.pdf">r&eacute;sum&eacute;</a></h6>
@@ -62,103 +59,85 @@
           <h6><a href="https://www.twitter.com/frosted2fire"><i class="fa fa-twitter"></i></a><span>&nbsp;/&nbsp;</span><a href="https://www.linkedin.com/in/radhikak1"><i class="fa fa-linkedin"></i></a></h6>
         </div>
       </div>
-      <div class="row home-brief">
+      <div class="row home-brief" style="padding-bottom:5rem">
         <div class="col-sm-4 home-project-brief">
-          <p><i class="fa fa-car"></i></p>
-          <h5 class="home-project-title">
-            <i class="fa fa-angle-double-right"></i>
-            &nbsp;Instapark
-          </h5>
-          <h3 class="home-project-subtitle">The Airbnb for University parking</h3>
-          <p class="home-project-blurb">There are several untapped opportunities for finding cheap parking spots in Ann Arbor. Parking prices vary through the day at various places and students are eager to rent out their personal spots for some extra money. Unfortunately, no centralized platform exists to make this happen. I built an app to address these needs</p>
-          <h6 class="home-project-tags">ideation, research, design, evaluate</h6>
-          <p class="home-project-blurb">Sep '15 - Dec '15</p>
+          <hr class="separator"/>
+          <h5 class="home-project-title"><i class="fa fa-car"></i><span style="padding-left:1rem">&nbsp; Instapark</span></h5>
+          <h2 class="home-project-subtitle">The Airbnb for University parking</h2>
+          <p class="ptufte home-project-blurb">There are several untapped opportunities for finding cheap parking spots in Ann Arbor. Parking prices vary through the day at various places and students are eager to rent out their personal spots for some extra money. Unfortunately, no centralized platform exists to make this happen. I built an app to address these needs</p>
+          <h6 class="ptufte home-project-tags">ideation, research, design, evaluate</h6>
+          <p class="ptufte home-project-blurb">Sep '15 - Dec '15</p><br/>
           <div class="view-case-study0"><span class="view-case-study"><a href="instapark.html">View case study</a></span></div>
         </div>
         <div class="col-sm-8 project-banner-setting">
           <div class="card1" style="padding:1rem"><a href="instapark.html"><img class="img-fluid" src="http://placehold.it/1500x925"/></a></div>
         </div>
       </div>
-      <div class="row home-brief">
+      <div class="row home-brief" style="padding-bottom:5rem">
         <div class="col-sm-4 home-project-brief">
-          <p><i class="fa fa-gamepad"></i></p>
-          <h5 class="home-project-title">
-            <i class="fa fa-angle-double-right"></i>
-            &nbsp;Latitude 90 - the origin
-          </h5>
-          <h3 class="home-project-subtitle">First mobile-social hybrid deduction game</h3>
-          <p class="home-project-blurb">Gaming company <a href="http://www.ghostroadhouse.com/">Ghost roadhouse</a> wanted us to redesign their game Latitude 90 for iOS. Latitude 90 is a first of it's kind hybrid mobile-social deduction game similar to werewolf and mafia. Client received addititional funding from Kickstarter due to this redesign.</p>
-          <h6 class="home-project-tags">research, redesign</h6>
-          <p class="home-project-blurb">Sep '15 - Dec '15</p>
+          <hr class="separator"/>
+          <h5 class="home-project-title"><i class="fa fa-gamepad"></i><span style="padding-left:1rem">&nbsp; Latitude 90 - the origin</span></h5>
+          <h2 class="home-project-subtitle">First mobile-social hybrid deduction game</h2>
+          <p class="ptufte home-project-blurb">Gaming company <a href="http://www.ghostroadhouse.com/">Ghost roadhouse</a> wanted us to redesign their game Latitude 90 for iOS. Latitude 90 is a first of it's kind hybrid mobile-social deduction game similar to werewolf and mafia. Client received addititional funding from Kickstarter due to this redesign.</p>
+          <h6 class="ptufte home-project-tags">research, redesign</h6>
+          <p class="ptufte home-project-blurb">Sep '15 - Dec '15</p><br/>
           <div class="view-case-study0"><span class="view-case-study"><a href="origin.html">View case study</a></span></div>
         </div>
         <div class="col-sm-8 project-banner-setting">
           <div class="card1" style="padding:1rem"><a href="origin.html"><img class="img-fluid" src="img/origin_banner_resized_3.png"/></a></div>
         </div>
       </div>
-      <div class="row home-brief">
+      <div class="row home-brief" style="padding-bottom:5rem">
         <div class="col-sm-4 home-project-brief">
-          <p><i class="fa fa-desktop"></i></p>
-          <h5 class="home-project-title">
-            <i class="fa fa-angle-double-right"></i>
-            &nbsp;My portfolio website design
-          </h5>
-          <h3 class="home-project-subtitle">User-centered portfolio design</h3>
-          <p class="home-project-blurb">An journey filled with lessons and learnings as I ventured to build a portfolio capturing my work. Experiences in an UX approach to portfolio website design, website creation and front-end development.</p>
-          <h6 class="home-project-tags">HTML, CSS3, SCSS, Jade, Bootstrap v3, Javascript</h6>
-          <p class="home-project-blurb">website_design.html</p>
-          <div class="view-case-study0"><span class="view-case-study"><a href="http://placehold.it/1500x925">View case study</a></span></div>
+          <hr class="separator"/>
+          <h5 class="home-project-title"><i class="fa fa-desktop"></i><span style="padding-left:1rem">&nbsp; My portfolio website design</span></h5>
+          <h2 class="home-project-subtitle">User-centered portfolio design</h2>
+          <p class="ptufte home-project-blurb">An journey filled with lessons and learnings as I ventured to build a portfolio capturing my work. Experiences in an UX approach to portfolio website design, website creation and front-end development.</p>
+          <h6 class="ptufte home-project-tags">HTML, CSS3, SCSS, Jade, Bootstrap v3, Javascript</h6>
+          <p class="ptufte home-project-blurb">Dec'16 - Jan'17</p><br/>
+          <div class="view-case-study0"><span class="view-case-study"><a href="website_design.html">View case study</a></span></div>
         </div>
         <div class="col-sm-8 project-banner-setting">
-          <div class="card1" style="padding:1rem"><a href="http://placehold.it/1500x925"><img class="img-fluid"/></a></div>
+          <div class="card1" style="padding:1rem"><a href="website_design.html"><img class="img-fluid" src="http://placehold.it/1500x925"/></a></div>
         </div>
       </div>
-      <div class="row home-brief">
+      <div class="row home-brief" style="padding-bottom:5rem">
         <div class="col-sm-4 home-project-brief">
-          <p><i class="fa fa-linux"></i></p>
-          <h5 class="home-project-title">
-            <i class="fa fa-angle-double-right"></i>
-            &nbsp;CSS Quizzer
-          </h5>
-          <h3 class="home-project-subtitle">Teach CSS3 through quiz</h3>
-          <p class="home-project-blurb">I learnt CSS myself through quizzing. I wanted to help others learn CSS the same way. So, I developed a web application using Python Flask and Bootstrap</p>
-          <h6 class="home-project-tags">Python, Flask, Jinja, Bootstrap</h6>
-          <p class="home-project-blurb">Nov'15 - Dec'15</p>
+          <hr class="separator"/>
+          <h5 class="home-project-title"><i class="fa fa-question-circle"></i><span style="padding-left:1rem">&nbsp; CSS Quizzer</span></h5>
+          <h2 class="home-project-subtitle">Teach CSS3 through quiz</h2>
+          <p class="ptufte home-project-blurb">I learnt CSS myself through quizzing. I wanted to help others learn CSS the same way. So, I developed a web application using Python Flask and Bootstrap</p>
+          <h6 class="ptufte home-project-tags">Python, Flask, Jinja, Bootstrap</h6>
+          <p class="ptufte home-project-blurb">Nov'15 - Dec'15</p><br/>
           <div class="view-case-study0"><span class="view-case-study"><a href="cssquiz.html">View case study</a></span></div>
         </div>
         <div class="col-sm-8 project-banner-setting">
           <div class="card1" style="padding:1rem"><a href="cssquiz.html"><img class="img-fluid" src="http://placehold.it/1500x925"/></a></div>
         </div>
       </div>
-      <div class="row home-brief">
+      <div class="row home-brief" style="padding-bottom:5rem">
         <div class="col-sm-4 home-project-brief">
-          <p><i class="fa fa-linux"></i></p>
-          <h5 class="home-project-title">
-            <i class="fa fa-angle-double-right"></i>
-            &nbsp;Shure design jam
-          </h5>
-          <h3 class="home-project-subtitle">Making music truly social</h3>
-          <p class="home-project-blurb">Many music apps focus on managing song libraries and listening. Shure wanted a music app that is social to help promote brand awareness of their Sound instruments.</p>
-          <p class="home-project-blurb">We <strong>designed an app in 1.5 hours and won 2nd place!</strong></p>
-          <h6 class="home-project-tags">Idea generator, Paper mockups, Material design</h6>
-          <p class="home-project-blurb">September 2015 - 1.5 hours</p>
+          <hr class="separator"/>
+          <h5 class="home-project-title"><i class="fa fa-trophy"></i><span style="padding-left:1rem">&nbsp; Shure design jam</span></h5>
+          <h2 class="home-project-subtitle">Making music truly social</h2>
+          <p class="ptufte home-project-blurb">Many music apps focus on managing song libraries and listening. Shure wanted a music app that is social to help promote brand awareness of their Sound instruments.</p>
+          <p class="ptufte home-project-blurb">We <strong>designed an app in 1.5 hours and won 2nd place!</strong></p>
+          <h6 class="ptufte home-project-tags">Idea generator, Paper mockups, Material design</h6>
+          <p class="ptufte home-project-blurb">September 2015 - 1.5 hours</p><br/>
           <div class="view-case-study0"><span class="view-case-study"><a href="shure.html">View case study</a></span></div>
         </div>
         <div class="col-sm-8 project-banner-setting">
           <div class="card1" style="padding:1rem"><a href="shure.html"><img class="img-fluid" src="http://placehold.it/1500x925"/></a></div>
         </div>
       </div>
-      <div class="row home-brief">
+      <div class="row home-brief" style="padding-bottom:5rem">
         <div class="col-sm-4 home-project-brief">
-          <p><i class="fa fa-medkit"></i></p>
-          <h5 class="home-project-title">
-            <i class="fa fa-angle-double-right"></i>
-            &nbsp;Diabetes prevalence analysis
-          </h5>
-          <h3 class="home-project-subtitle">Is income &amp; diabetes prevalence related?</h3>
-          <p class="home-project-blurb">I applied data visualization principle to uncover relation between diabetes prevalence and income of nations.</p>
-          <h6 class="home-project-tags">Data set collection, Programming, Data visualization</h6>
-          <p class="home-project-blurb">February 2016 - 1 day</p>
+          <hr class="separator"/>
+          <h5 class="home-project-title"><i class="fa fa-medkit"></i><span style="padding-left:1rem">&nbsp; Diabetes prevalence analysis</span></h5>
+          <h2 class="home-project-subtitle">Is income &amp; diabetes prevalence related?</h2>
+          <p class="ptufte home-project-blurb">I applied data visualization principle to uncover relation between diabetes prevalence and income of nations.</p>
+          <h6 class="ptufte home-project-tags">Data set collection, Programming, Data visualization</h6>
+          <p class="ptufte home-project-blurb">February 2016 - 1 day</p><br/>
           <div class="view-case-study0"><span class="view-case-study"><a href="diabetes.html">View case study</a></span></div>
         </div>
         <div class="col-sm-8 project-banner-setting">
