Made lot of progress in fixing responsiveness bugs

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container">
       <div class="row headline">
         <div class="col-sm-6">
-          <h1 class="site-title">Radhika Kolathumani</h1><img class="img-responsive process_diagram" src="path1.png"/>
+          <h1 class="site-title">Radhika Kolathumani</h1><img class="img-fluid process_diagram" src="path1.png"/>
         </div>
         <div class="site-menu col-sm-6" id="site-menu1">
           <h6><span class="selected">work</span><span>&nbsp;/&nbsp;</span><a href="story.html">my story</a><span>&nbsp;/&nbsp;</span><a href="resume.pdf">r&eacute;sum&eacute;</a></h6>
