--- a/origin.html
+++ b/origin.html
@@ -45,6 +45,10 @@
             color: black !important;
         }
 
+        h1, h2, h3 {
+            color: #293E68;
+        }
+        
     </style>
           
     </head>
