--- a/origin.html
+++ b/origin.html
@@ -46,7 +46,7 @@
         }
 
         h1, h2, h3 {
-            color: #293E68;
+            color: rgba(0,0,0,0.8);
         }
         
     </style>
