--- a/jade_work_template.html
+++ b/jade_work_template.html
@@ -21,7 +21,8 @@
     <link rel="stylesheet" href="work.css"/>
     <style>
       h1, h2, h3 {
-          color: #293E68;
+          // color: #293E68;
+          color: rgba(0,0,0,0.8); 
       }
       
     </style>
