--- a/website_design.html
+++ b/website_design.html
@@ -21,7 +21,8 @@
     <link rel="stylesheet" href="work.css"/>
     <style>
       h1, h2, h3 {
-          color: #293E68;
+          // color: #293E68;
+          color: rgba(0,0,0,0.8); 
       }
       
     </style>
@@ -70,12 +71,6 @@
     </style>
   </head>
   <body data-spy="scroll" data-target=".navbar" data-offset="50">
-    <style>
-      h1, h2, h3 {
-          color: #293E68;
-      }
-          
-    </style>
     <div class="container-fluid home-project-cover" id="work_banner" style="background-color:white">
       <div class="row">
         <div class="col-md-6 home-project-left">
