--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <div class="view-case-study0"><span class="view-case-study"><a href="website_design.html">View case study</a></span></div>
         </div>
         <div class="col-sm-8 project-banner-setting">
-          <div class="card1" style="padding:1rem"><a href="website_design.html"><img class="img-fluid" src="http://placehold.it/1500x925"/></a></div>
+          <div class="card1" style="padding:1rem"><a href="website_design.html"><img class="img-fluid" src="img/insta_home.png"/></a></div>
         </div>
       </div>
       <div class="row home-brief" style="padding-bottom:5rem">
