--- a/website_design.html
+++ b/website_design.html
@@ -131,38 +131,40 @@
             </ul>
             <h2>Goals</h2>
             <p>Based on above research I set the following design goals.</p>
-            <table class="table table-bordered heuristic-table">
-              <tbody>
-                <tr>
-                  <td class="col-md-6">
-                    <dl>
-                      <dt>Let work speak for itself</dt>
-                      <dd>I didn't want this website to be the primary source of interest for the reader. I wanted reader to be more focused on my project work</dd>
-                    </dl>
-                  </td>
-                  <td class="col-md-6">
-                    <dl>
-                      <dt>Reader can quickly assess work quality</dt>
-                      <dd>I was aware that readers have to read hundreds of portfolios and are short on time. Help them help me.</dd>
-                    </dl>
-                  </td>
-                </tr>
-                <tr>
-                  <td class="col-md-6">
-                    <dl>
-                      <dt>Reader is guided through my work</dt>
-                      <dd>Since I won't be present to walk through the portfolio the reader, the website should be able to guide reader through the portfolio</dd>
-                    </dl>
-                  </td>
-                  <td class="col-md-6">
-                    <dl>
-                      <dt>Reader can read on any device type</dt>
-                      <dd>This meant the website need to be responsive at-least and being adaptive to device type would be a very nice thing to have                        </dd>
-                    </dl>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="table-responsive">
+              <table class="table table-bordered heuristic-table">
+                <tbody>
+                  <tr>
+                    <td class="col-md-6">
+                      <dl>
+                        <dt>Let work speak for itself</dt>
+                        <dd>I didn't want this website to be the primary source of interest for the reader. I wanted reader to be more focused on my project work</dd>
+                      </dl>
+                    </td>
+                    <td class="col-md-6">
+                      <dl>
+                        <dt>Reader can quickly assess work quality</dt>
+                        <dd>I was aware that readers have to read hundreds of portfolios and are short on time. Help them help me.</dd>
+                      </dl>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="col-md-6">
+                      <dl>
+                        <dt>Reader is guided through my work</dt>
+                        <dd>Since I won't be present to walk through the portfolio the reader, the website should be able to guide reader through the portfolio</dd>
+                      </dl>
+                    </td>
+                    <td class="col-md-6">
+                      <dl>
+                        <dt>Reader can read on any device type</dt>
+                        <dd>This meant the website need to be responsive at-least and being adaptive to device type would be a very nice thing to have                        </dd>
+                      </dl>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
             <h2>Explorations &amp; decisions</h2>
             <h3>KISS principle. Occam's razor</h3>
             <p>No fancy animations and Javascript libraries that distract or conflict with animation present in your actual work. Keep website design simple and let your real work shine through. When it doubt choose the simpler option.</p>
