--- a/website_design.html
+++ b/website_design.html
@@ -320,7 +320,7 @@
             <h3>Decided to hand code</h3>
             <p>I really want to get full control of the layout and be able to reuse my layout specifications across all pages and minimize duplicate work. As existing tools did not suffice, I hand coded it myself.</p>
             <p>The website is built using <strong>Bootstrap v3</strong>. I apply the <strong>DRY principle</strong> and use <strong>SCSS</strong> and <strong>Jade</strong> to that advantage.</p>
-            <p>I used Brackets editor. Code can be found here.</p>
+            <p>I used Brackets editor. Code can be found here on <a href="https://github.com/radhikamani88/radhikamani88.github.io">github</a></p>
           </section>
         </article>
       </div>
