--- a/index.html
+++ b/index.html
@@ -67,7 +67,15 @@
           <p class="ptufte home-project-blurb">There are several untapped opportunities for finding cheap parking spots in Ann Arbor. Parking prices vary through the day at various places and students are eager to rent out their personal spots for some extra money. Unfortunately, no centralized platform exists to make this happen. I built an app to address these needs</p>
           <h6 class="ptufte home-project-tags">ideation, research, design, evaluate</h6>
           <p class="ptufte home-project-blurb">Sep '15 - Dec '15</p><br/>
-          <div class="view-case-study0"><span class="view-case-study"><a href="instapark.html">View case study</a></span></div>
+          <table>
+            <tr>
+              <td>                   
+                <div class="view-case-study0"><span class="view-case-study case-button"><a href="instapark.html" target="_blank">View case study</a></span></div>
+              </td>
+              <td style="padding-left:1rem">
+              </td>
+            </tr>
+          </table>
         </div>
         <div class="col-sm-8 project-banner-setting">
           <div class="card1" style="padding:1rem"><a href="instapark.html"><img class="img-fluid" src="http://placehold.it/1500x925"/></a></div>
@@ -81,7 +89,15 @@
           <p class="ptufte home-project-blurb">Gaming company <a href="http://www.ghostroadhouse.com/">Ghost roadhouse</a> wanted us to redesign their game Latitude 90 for iOS. Latitude 90 is a first of it's kind hybrid mobile-social deduction game similar to werewolf and mafia. Client received addititional funding from Kickstarter due to this redesign.</p>
           <h6 class="ptufte home-project-tags">research, redesign</h6>
           <p class="ptufte home-project-blurb">Sep '15 - Dec '15</p><br/>
-          <div class="view-case-study0"><span class="view-case-study"><a href="origin.html">View case study</a></span></div>
+          <table>
+            <tr>
+              <td>                   
+                <div class="view-case-study0"><span class="view-case-study case-button"><a href="origin.html" target="_blank">View case study</a></span></div>
+              </td>
+              <td style="padding-left:1rem">
+              </td>
+            </tr>
+          </table>
         </div>
         <div class="col-sm-8 project-banner-setting">
           <div class="card1" style="padding:1rem"><a href="origin.html"><img class="img-fluid" src="img/origin_banner_resized_3.png"/></a></div>
@@ -95,10 +111,19 @@
           <p class="ptufte home-project-blurb">An journey filled with lessons and learnings as I ventured to build a portfolio capturing my work. Experiences in an UX approach to portfolio website design, website creation and front-end development.</p>
           <h6 class="ptufte home-project-tags">HTML, CSS3, SCSS, Jade, Bootstrap v3, Javascript</h6>
           <p class="ptufte home-project-blurb">Dec'16 - Jan'17</p><br/>
-          <div class="view-case-study0"><span class="view-case-study"><a href="website_design.html">View case study</a></span></div>
+          <table>
+            <tr>
+              <td>                   
+                <div class="view-case-study0"><span class="view-case-study case-button"><a href="website_design.html" target="_blank">View case study</a></span></div>
+              </td>
+              <td style="padding-left:1rem">
+                <div class="view-case-study0"><span class="view-case-study code-button"><a href="https://github.com/radhikamani88/radhikamani88.github.io" target="_blank">View code</a></span></div>
+              </td>
+            </tr>
+          </table>
         </div>
         <div class="col-sm-8 project-banner-setting">
-          <div class="card1" style="padding:1rem"><a href="website_design.html"><img class="img-fluid" src="img/insta_home.png"/></a></div>
+          <div class="card1" style="padding:1rem"><a href="website_design.html"><img class="img-fluid" src="img/website_home.png"/></a></div>
         </div>
       </div>
       <div class="row home-brief" style="padding-bottom:5rem">
@@ -109,7 +134,15 @@
           <p class="ptufte home-project-blurb">I learnt CSS myself through quizzing. I wanted to help others learn CSS the same way. So, I developed a web application using Python Flask and Bootstrap</p>
           <h6 class="ptufte home-project-tags">Python, Flask, Jinja, Bootstrap</h6>
           <p class="ptufte home-project-blurb">Nov'15 - Dec'15</p><br/>
-          <div class="view-case-study0"><span class="view-case-study"><a href="cssquiz.html">View case study</a></span></div>
+          <table>
+            <tr>
+              <td>                   
+                <div class="view-case-study0"><span class="view-case-study case-button"><a href="cssquiz.html" target="_blank">View case study</a></span></div>
+              </td>
+              <td style="padding-left:1rem">
+              </td>
+            </tr>
+          </table>
         </div>
         <div class="col-sm-8 project-banner-setting">
           <div class="card1" style="padding:1rem"><a href="cssquiz.html"><img class="img-fluid" src="http://placehold.it/1500x925"/></a></div>
@@ -124,7 +157,15 @@
           <p class="ptufte home-project-blurb">We <strong>designed an app in 1.5 hours and won 2nd place!</strong></p>
           <h6 class="ptufte home-project-tags">Idea generator, Paper mockups, Material design</h6>
           <p class="ptufte home-project-blurb">September 2015 - 1.5 hours</p><br/>
-          <div class="view-case-study0"><span class="view-case-study"><a href="shure.html">View case study</a></span></div>
+          <table>
+            <tr>
+              <td>                   
+                <div class="view-case-study0"><span class="view-case-study case-button"><a href="shure.html" target="_blank">View case study</a></span></div>
+              </td>
+              <td style="padding-left:1rem">
+              </td>
+            </tr>
+          </table>
         </div>
         <div class="col-sm-8 project-banner-setting">
           <div class="card1" style="padding:1rem"><a href="shure.html"><img class="img-fluid" src="http://placehold.it/1500x925"/></a></div>
@@ -138,7 +179,15 @@
           <p class="ptufte home-project-blurb">I applied data visualization principle to uncover relation between diabetes prevalence and income of nations.</p>
           <h6 class="ptufte home-project-tags">Data set collection, Programming, Data visualization</h6>
           <p class="ptufte home-project-blurb">February 2016 - 1 day</p><br/>
-          <div class="view-case-study0"><span class="view-case-study"><a href="diabetes.html">View case study</a></span></div>
+          <table>
+            <tr>
+              <td>                   
+                <div class="view-case-study0"><span class="view-case-study case-button"><a href="diabetes.html" target="_blank">View case study</a></span></div>
+              </td>
+              <td style="padding-left:1rem">
+              </td>
+            </tr>
+          </table>
         </div>
         <div class="col-sm-8 project-banner-setting">
           <div class="card1" style="padding:1rem"><a href="diabetes.html"><img class="img-fluid" src="http://placehold.it/1500x925"/></a></div>
