--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                 <div class="view-case-study0"><span class="view-case-study case-button"><a href="cssquiz.html" target="_blank">View case study</a></span></div>
               </td>
               <td style="padding-left:1rem">
+                <div class="view-case-study0"><span class="view-case-study code-button"><a href="https://github.com/dcamerik/SI-539-CSS-Quiz" target="_blank">View code</a></span></div>
               </td>
             </tr>
           </table>
@@ -185,6 +186,7 @@
                 <div class="view-case-study0"><span class="view-case-study case-button"><a href="diabetes.html" target="_blank">View case study</a></span></div>
               </td>
               <td style="padding-left:1rem">
+                <div class="view-case-study0"><span class="view-case-study code-button"><a href="https://github.com/radhikamani88/diabetesviz" target="_blank">View code</a></span></div>
               </td>
             </tr>
           </table>
