set links in navbar

--- a/instapark.html
+++ b/instapark.html
@@ -106,7 +106,11 @@
         <div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li><a href="challenge">Challenge</a></li>
+              <li><a href="#process">Process</a></li>
+              <li><a href="#define">Defining MVP1</a></li>
+              <li><a href="#design">Designing MVP1</a></li>
+              <li><a href="#impact">Impact</a></li>
+              <li><a href="#learnings">Learnings</a></li>
             </ul>
           </div>
         </div>
@@ -126,7 +130,7 @@
             <p>Add to that, the prices of parking spots vary by place and time of day. This problem is amplified during Michigan events when everybody wants to for example, park close to the stadium. Students who are usually running short on cash have a tough time finding parking. Here too, students are willing to rent out their personal parking spots for additional money during events. </p>
             <p>Unfortunately, no application exists to solve these problems even when all the technology to implement a solution exists. As a student, I was myself frustrated by these problems and thought of building an application to address these needs.</p>
             <p>I built a solution to address these needs.</p>
-            <h2>Process</h2>
+            <h2 id="process">Process</h2>
             <h3>Methodology</h3>
             <p>For this project, I followed the <strong>participatory design methodology</strong>. This was feasible since I had ready access to student and faculty to participate in design sessions.</p>
             <p>I also conducted small user focus groups to collect enough data points for backing up my research, used surveys to understand user's needs, behaviors and attitudes and did concept ranking to prioritize app features. </p>
@@ -157,7 +161,7 @@
             <p>The product design for this product did not follow a linear trajectory. It reminded me so much of treasure hunt cartoons I saw when I was a kid. </p>
             <p>The initial product focused heavily on late night parking and women safety. However, after more research I found out that that was not the case and price, availability and convenience were important factors. Finding parking for events turned out to be an important ask as well.</p>
             <p>Because I was iterating quickly through various design artifacts like paper prototypes and low-fis initially, I found it easy to change product direction without much loss of effort.                        </p>
-            <h2>Defining MVP1</h2>
+            <h2 id="define">Defining MVP1</h2>
             <h3>Ideation</h3>
             <p>I brainstormed couple of different ideas to address the parking problems of students. I sketched them quickly and presented them to stakeholders. Stakeholders provided feedback. This armed me with data to decide what design solution to explore further.</p>
             <p>I explored 7 different concepts: </p>
@@ -230,7 +234,7 @@
       <div class="row">
         <article class="nobottompadding">
           <section>
-            <h2>Designing MVP1</h2>
+            <h2 id="design">Designing MVP1</h2>
             <h3>Personas</h3>
             <p>With the target audience and feature set for MVP1 decided, I created personas capturing the movitation, goals and frustration of my target audience to help me guidance through designing the experience.</p>
           </section>
@@ -447,10 +451,10 @@
       <div class="row">
         <article class="nobottompadding">
           <section>
-            <h3>Impact</h3>
+            <h2 id="impact">Impact</h2>
             <p>The hi-fidelity prototypes were well received by student participants. They really liked the P2P parking idea and the fact that they were provided suggestions for determining parking price. </p>
             <p>We then discussed about getting this implemented. I had researched earlier about the ParkWhiz API which would allow us to get the MVP1 for thiis app quickly implemented. Due to my commitments to other projects, I could not focus on developing an MVP1 app. I hope to do that soon though!</p>
-            <h3>Learnings</h3>
+            <h2 id="learnings">Learnings</h2>
             <p>This project had many firsts. This was my first large interaction design project. I learnt a lot about applying UX design process when building a product. I learnt that when building new products, when requirements are unclear, we need to be heavily grounded in research, listen carefully to our customers and adjust our course based on that. We should adopt a UX process that allows us to remain lean and agile and pivot quickly based on customers and so that we can quickly test our ideas with customers. I learnt the value of different UX design techniques like paper prototypes, wireframes, story boarding and hi-fidelity prototypes and when/when not to use them. Overall, this project was a great learning experience.</p>
           </section>
         </article>
