--- a/jade_work_template.html
+++ b/jade_work_template.html
@@ -106,9 +106,9 @@
         <div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li><a href="0">0</a></li>
-              <li><a href="1">1</a></li>
-              <li><a href="2">2</a></li>
+              <li><a href="#0">0</a></li>
+              <li><a href="#1">1</a></li>
+              <li><a href="#2">2</a></li>
             </ul>
           </div>
         </div>
