--- a/website_design.html
+++ b/website_design.html
@@ -106,7 +106,7 @@
         <div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-              <li><a href="challenge">Challenge</a></li>
+              <li><a href="#challenge">Challenge</a></li>
             </ul>
           </div>
         </div>
