about me updated

--- a/story.html
+++ b/story.html
@@ -139,7 +139,7 @@
                   <figure class="imghvr-fade" style="background-color: #94001c"><img class="img-responsive" src="img/seattle.png" title="Click to see enlarged image"/>
                     <figcaption style="background-color: #242134">
                       <h2 class="h2tufte">Resident of Seattle</h2>
-                      <p class="ptufte">I moved to Seattle WA in 2013 and now I call it my US hometown! I love this beautiful city!</p>
+                      <p class="ptufte">I moved to Seattle in 2013 and now I call it my US hometown! I don't know if it's the cofree or seahawks, but I love this beautiful city! And who doesn't like watching an active volcano from the backyard :P</p>
                     </figcaption>
                   </figure>
                 </div>
@@ -150,8 +150,8 @@
                 <div class="card2" style="padding:0.7rem">
                   <figure class="imghvr-fade" style="background-color: #94001c"><img class="img-responsive" src="img/board.png" title="Click to see enlarged image"/>
                     <figcaption style="background-color: #242134">
-                      <h2 class="h2tufte">Go Blue!</h2>
-                      <p class="ptufte">I am currently a graduate student of University of Michigan Ann Arbor and proud of being being a wolverine. Because wherever you are in the world,we wolverines share a special bond from protecting the sacred M in the Diag.</p>
+                      <h2 class="h2tufte">Boardgames!</h2>
+                      <p class="ptufte">When I am not designing, I am often engrossed with playing strategy board games.  This has often helped me to look at problems from diverse perspectives.</p>
                     </figcaption>
                   </figure>
                 </div>
@@ -164,8 +164,8 @@
                         <div class="card2" style="padding:0.7rem">
                           <figure class="imghvr-fade" style="background-color: #94001c"><img class="img-responsive" src="img/umich.jpg" title="Click to see enlarged image"/>
                             <figcaption style="background-color: #242134">
-                              <h2 class="h2tufte">Design</h2>
-                              <p class="ptufte">I enjoy problem solving and simplifying complex things</p>
+                              <h2 class="h2tufte">Go Blue!</h2>
+                              <p class="ptufte">I am currently a graduate student of University of Michigan Ann Arbor and a proud wolverine. Wherever we are in the world, we wolverines share a special bond from protecting the sacred M in the Diag.</p>
                             </figcaption>
                           </figure>
                         </div>
